--- a/ProyectoProductosC/ProyectoProductosC/ProyectoProductosC.vcxproj.filters
+++ b/ProyectoProductosC/ProyectoProductosC/ProyectoProductosC.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Articulos.c">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="Pedidos.c">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Consola.h">
@@ -42,6 +45,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Articulos.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Pedidos.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
