--- a/ProyectoProductosC/ProyectoProductosC/ProyectoProductosC.vcxproj.filters
+++ b/ProyectoProductosC/ProyectoProductosC/ProyectoProductosC.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Pedidos.c">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="Facturacion.c">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Consola.h">
@@ -48,6 +51,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Pedidos.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Facturacion.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
